--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,7 @@ layout: compress
     <link rel="apple-touch-icon" sizes="144x144" href="/img/apple-touch-icon-ipad-retina-152x152.png">
 
       <!-- CSS -->
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/main.scss">
 
 
       <!-- Google TagManager --> 
