--- a/_includes/head.html
+++ b/_includes/head.html
@@ -63,7 +63,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/img/apple-touch-icon-ipad-retina-152x152.png">
 
       <!-- CSS -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/main.scss">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 
       <!-- Google TagManager --> 
     {% include google-tag-manager-head.html %}
