--- a/_includes/font-loader.html
+++ b/_includes/font-loader.html
@@ -1,5 +1,5 @@
 <noscript>
-      <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.scss"/>
+      <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css"/>
       <link rel="stylesheet" type="text/css" href="/font-awesome/css/font-awesome.min.css"/>
 </noscript>
 
