--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,7 +99,7 @@ layout: compress
         <!-- Footer --> 
          <footer>
             <div class="foot-left">
-                    <a href="#top"><img class="logo-wj" src="/img/syracuse.jpg" alt="syracuse"></a>
+                    <a href="#top"><img class="logo-wj" src="{{ site.baseurl }}/img/syracuse.jpg" alt="syracuse"></a>
             </div>
 
            <div class="foot-center">
