--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
  <footer>
         <div class="foot-left">
-                <a href="#top"><img class="logo-wj" src="/img/syracuse.jpg" alt="syracuse"></a>
+                <a href="#top"><img class="logo-wj" src="{{ site.baseurl }}/img/syracuse.jpg" alt="syracuse"></a>
         </div>
 
        <div class="foot-center">
