--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -109,7 +109,7 @@ footer {
 
 
 .logo {
-    background-image: url(/img/home.png);
+    background-image: url({{ site.baseurl }}/img/home.png);
     position: absolute;
     top: 2%;
     left: 5%;
