--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1,3 +1,4 @@
+$baseurl = "{{ site.baseurl }}";
 
 header {
     padding: 5em 1em 3em 1em;
@@ -45,7 +46,7 @@ footer {
     padding: 2em 1em 2em 1em;
     margin-top: 2em;
     background-color: lighten($grey-color, 40%);
-    background-image: url({{ site.baseurl }}/images/pattern.png);
+    background-image: url($baseurl + "/images/pattern.png");
     color: lighten($color, 40%);
     font-size: $small-fs;
     .logo-wj {
@@ -109,7 +110,7 @@ footer {
 
 
 .logo {
-    background-image: url({{ site.baseurl }}/img/home.png);
+    background-image: url($baseurl + "/img/home.png");
     position: absolute;
     top: 2%;
     left: 5%;
