--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@ layout: compress
     <link rel="publisher" href="https://plus.google.com/u/0/104018354357909665325"/>
 
         <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/img/favicon.ico" />
 
      <!-- Apple touch icons -->
     <link rel="apple-touch-icon-precomposed" href="/img/apple-touch-icon-iphone-60x60.png">
