--- a/_includes/head.html
+++ b/_includes/head.html
@@ -56,7 +56,7 @@
     <link rel="publisher" href="https://plus.google.com/104018354357909665325"/>
 
         <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/img/favicon.ico" />
 
      <!-- Apple touch icons -->
     <link rel="apple-touch-icon-precomposed" href="/img/apple-touch-icon-iphone-60x60.png">
