--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,7 +36,7 @@
         "@type": "TechArticle",
         "name": "DataScience Blogs | {%if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}",
         "headline": "{%if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}",
-        {%if page.image %}"image": "{{ site.baseurl }}/thumbs/{{ page.image }}",{% else %}"image": "{{site.url}}/img/{{ site.logo }}",{% endif %}
+        {%if page.image %}"image": "/{{ site.baseurl }}/thumbs/{{ page.image }}",{% else %}"image": "{{site.url}}/img/{{ site.logo }}",{% endif %}
         "description": "{% if page.desc %}{{ page.desc}}{% else %}{{ site.description}}{% endif %}",
         "logo": "http://blog.webjeda.com/img/webjeda-logo.svg",
         "url": "{{ site.url }}{{ page.url }}"
