--- a/_includes/post-header.html
+++ b/_includes/post-header.html
@@ -1,6 +1,6 @@
 
 <div class="post-head">
-<img class="half left noborder featured" width="600" alt="{{page.title}}" title="{{page.title}}" itemprop="thumbnailUrl"  src="/thumbs/{{page.image}}">
+<img class="half left noborder featured" width="600" alt="{{page.title}}" title="{{page.title}}" itemprop="thumbnailUrl"  src="{{ site.baseurl }}/thumbs/{{page.image}}">
 
 <p class="intro half"><i class="fa fa-quote-left fa-3x fa-pull-left fa-border"></i>{{page.desc}}</p>
 </div>
