--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -50,18 +50,18 @@ layout: default
 <strong><p>Share this:</p></strong>  
 <ul>
     <li><a href="https://twitter.com/intent/tweet?text={{page.title}}&url={{site.url}}{{page.url}}" onclick="window.open(this.href, 'mywin',
-'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"><img src="/{{ site.baseurl }}/img/social/twitter.svg" alt="twitter"></a></li>
+'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"><img src="{{ site.baseurl }}/img/social/twitter.svg" alt="twitter"></a></li>
     
     <li><a href="https://www.facebook.com/sharer/sharer.php?u={{site.url}}{{page.url}}" onclick="window.open(this.href, 'mywin',
-'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"><img src="/{{ site.baseurl }}/img/social/facebook.svg" alt="facebook"></a></li>
+'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"><img src="{{ site.baseurl }}/img/social/facebook.svg" alt="facebook"></a></li>
    
     <li><a href="http://www.reddit.com/submit?url={{site.url}}{{page.url}}" onclick="window.open(this.href, 'mywin',
-'left=20,top=20,width=900,height=500,toolbar=1,resizable=0'); return false;"><img src="/{{ site.baseurl }}/img/social/reddit.svg" alt="reddit"></a></li>
+'left=20,top=20,width=900,height=500,toolbar=1,resizable=0'); return false;"><img src="{{ site.baseurl }}/img/social/reddit.svg" alt="reddit"></a></li>
     
     <li><a href="https://plus.google.com/share?url={{site.url}}{{page.url}}" onclick="window.open(this.href, 'mywin',
-'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"><img src="/{{ site.baseurl }}/img/social/google.svg" alt="google"></a></li>
+'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"><img src="{{ site.baseurl }}/img/social/google.svg" alt="google"></a></li>
     
-    <li><a href="mailto:?subject={{page.title}}&amp;body=Check out this site {{site.url}}{{page.url}}"><img src="/{{ site.baseurl }}/img/social/gmail.svg" alt="email"></a></li>
+    <li><a href="mailto:?subject={{page.title}}&amp;body=Check out this site {{site.url}}{{page.url}}"><img src="{{ site.baseurl }}/img/social/gmail.svg" alt="email"></a></li>
 </ul>    
 </div>  
 
