--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -110,7 +110,7 @@ footer {
 
 
 .logo {
-    background-image: url($baseurl + "/img/home.png");
+    background-image: url({{ site.baseurl }} + "/img/home.png");
     position: absolute;
     top: 2%;
     left: 5%;
@@ -136,5 +136,4 @@ footer {
             top: 3%;
         }
     }
-
 }
