--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -109,7 +109,7 @@ layout: compress
 
             <div class="foot-right">
                  <ul>
-                    <li><a href="/search/#search-container">Search</a></li>
+                    <li><a href="{{ site.baseurl }}/search/#search-container">Search</a></li>
                     <li><a href="/about/">About</a></li>
                     <li><a href="/contact/">Contact</a></li>
                 </ul>
