--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,9 +10,9 @@
 
         <div class="foot-right">
              <ul>
-                <li><a href="/search/#search-container">Search</a></li>
-                <li><a href="/about/">About</a></li>
-                <li><a href="/contact/">Contact</a></li>
+                <li><a href="{{ site.baseurl }}/search/#search-container">Search</a></li>
+                <li><a href="{{ site.baseurl }}/about/">About</a></li>
+                <li><a href="{{ site.baseurl }}/contact/">Contact</a></li>
             </ul>
         </div>
 </footer>
