--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -110,8 +110,8 @@ layout: compress
             <div class="foot-right">
                  <ul>
                     <li><a href="{{ site.baseurl }}/search/#search-container">Search</a></li>
-                    <li><a href="/about/">About</a></li>
-                    <li><a href="/contact/">Contact</a></li>
+                    <li><a href="{{ site.baseurl }}/about/">About</a></li>
+                    <li><a href="{{ site.baseurl }}/contact/">Contact</a></li>
                 </ul>
             </div>
         </footer>
