--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <div class="wrapper">
-      <a href="{{ site.baseurl }}/"><img alt="webjeda logo" id="logo" width="200" src=""></a> 
+      <a href="{{ site.baseurl }}/"><img alt=" logo" id="logo" width="200" src=""></a> 
 
   </div>
   <!-- Use any element to open/show the overlay navigation menu -->
@@ -23,17 +23,12 @@
    
    <div class="nav-box">
        <h2>Pages</h2>
-        <a href="/about/">About</a>
-        <a href="/contact/">Contact</a>
-        <a href="/search/">Search</a>
+        <a href="{{ site.baseurl }}/about/">About</a>
+        <a href="{{ site.baseurl }}/contact/">Contact</a>
+        <a href="{{ site.baseurl }}/search/">Search</a>
    </div>
    <div class="nav-box">
        <h2>Themes</h2>
-        <a href="/jekyll-themes/hagura/">Hagura</a>
-        <a href="/jekyll-themes/karna/">Karna</a>
-        <a href="/jekyll-themes/vyaasa/">Vyaasa</a>
-        <a href="/jekyll-themes/cards/">Cards</a>
-        <a href="/jekyll-themes/online-cv/">Online CV</a>
    </div>
 
     </div>
