--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,7 +38,7 @@
         "headline": "{%if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}",
         {%if page.image %}"image": "/{{ site.baseurl }}/thumbs/{{ page.image }}",{% else %}"image": "{{site.url}}/img/{{ site.logo }}",{% endif %}
         "description": "{% if page.desc %}{{ page.desc}}{% else %}{{ site.description}}{% endif %}",
-        "logo": "http://blog.webjeda.com/img/webjeda-logo.svg",
+        "logo": "",
         "url": "{{ site.url }}{{ page.url }}"
       }
     </script>
