--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,7 +88,7 @@ layout: compress
     
     <header>
         <h1 class="post-title">{{page.title}}</h1>
-        <a href="/"><div class="logo"></div></a>
+        <a href="{{ site.baseurl }}/"><div class="logo"></div></a>
     </header>
     
     <div class="container">
